--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
     div(class="container")
       br
       br
-      h1(class="header center red-text") BREAK-THEM
+      h1(class="header center red-text") wreck-them
       div(class="row center")
         h5(class="header col s12 light").
           Disfruta jugando en línea contra otros jugadores y arruínalos antes de que lo hagan ellos contigo
