--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html
 
         nav(class="red lighten-1" role="navigation")
             div(class="nav-wrapper container")
-                a(id="logo-container" href="#" class="brand-logo") BREAK-THEM
+                a(id="logo-container" href="#" class="brand-logo") wreck-them
                 ul(class="right hide-on-med-and-down")
                     li
                         a(href="#") Navbar Link
