Frontend base con materialize

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,13 +3,9 @@ extends layout
 block content
   div(class="section no-pad-bot" id="index-banner")
     div(class="container")
-      br
-      br
-      h1(class="header center red-text") wreck-them
+      h1(class="header center red-text text-darken-3") Wreck-them
       div(class="row center")
         h5(class="header col s12 light").
           Disfruta jugando en línea contra otros jugadores y arruínalos antes de que lo hagan ellos contigo
       div(class="row center")
-        a(href="#" id="download-button" class="btn-large waves-effect waves-light red") Registro
-  br
-  br
+        a(href="registro" id="download-button" class="btn-large waves-effect waves-light") Registro
