--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,30 +2,35 @@ doctype html
 html
     head
         title= title
-        link(rel='stylesheet', href='/stylesheets/style.css')
+        meta(name="viewport" content="width=device-width, user-scalable=no")
+
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+        link(rel='stylesheet', href='/stylesheets/style.css')
     body
 
-        nav(class="red lighten-1" role="navigation")
+        nav(class="red darken-3" role="navigation")
             div(class="nav-wrapper container")
-                a(id="logo-container" href="#" class="brand-logo") wreck-them
+                a(id="logo-container" href="/" class="brand-logo") Wreck-them
                 ul(class="right hide-on-med-and-down")
-                    li
-                        a(href="#") Navbar Link
-
+                    include includes/nav
                 ul(id="nav-mobile" class="side-nav")
-                    li
-                        a(href="#") Navbar Link
+                    include includes/nav
                 a(href="#" data-activates="nav-mobile" class="button-collapse")
                     i(class="material-icons") menu
 
-        block content
+        include includes/modal-login
 
-        footer(class="page-footer red")
+        br
+        br
+        block content
+        br
+        br
+
+        footer(class="page-footer red darken-3")
             div(class="footer-copyright")
-                div(class="container right-align").
-                    Diseñado por <a class="red-text text-lighten-3" href="#">Juan Antonio Romero Molero</a>
+                div(class="container right-align") Diseñado por
+                        a(class="red-text text-lighten-3" href="#")  Juan Antonio Romero Molero
 
         block scripts
             <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
