Incluyendo base de datos MySQL

--- a/views/register.jade
+++ b/views/register.jade
@@ -6,22 +6,22 @@ block content
         form(class="col s12 m8 offset-m2" method="post" action="#")
             div(class="row")
                 div(class="input-field col s12 l6")
-                    input(id="name" type="text")
-                    label(for="name") Nombre
+                    input(name="realname" id="realname" type="text")
+                    label(for="realname") Nombre
                 div(class="input-field col s12 l6")
-                    input(id="apellidos" type="text")
+                    input(name="apellidos" id="apellidos" type="text")
                     label(for="apellidos") Apellidos
                 div(class="input-field col s12 l6")
-                    input(id="username" type="text")
+                    input(name="username" id="username" type="text")
                     label(for="username") Nombre de usuario
                 div(class="input-field col s12 l6")
-                    input(id="born" type="date" class="datepicker")
+                    input(name="born" id="born" type="date" class="datepicker")
                     label(for="born") Fecha de nacimiento
                 div(class="input-field col s12 l6")
-                    input(id="passwd" type="password")
+                    input(name="passwd" id="passwd" type="password")
                     label(for="passwd") Contraseña
                 div(class="input-field col s12 l6")
-                    input(id="passwd2" type="password")
+                    input(name="passwd2" id="passwd2" type="password")
                     label(for="passwd2") Confirmar contraseña
                 div(class="clearfix")
                 div(class="margin-top")
