--- a/wreck-them/src/WreckThemBundle/Resources/views/User/perfil.html.twig
+++ b/wreck-them/src/WreckThemBundle/Resources/views/User/perfil.html.twig
@@ -3,6 +3,9 @@
 {% block content %}
     {{ form_start(form) }}
     {{ form_row(form.email) }}
+    {{ form_row(form.nick) }}
+    {{ form_row(form.img) }}
+    {{ form_errors(form.img) }}
     {#{{ form_row(form.plainPassword.first) }}#}
     {#{{ form_row(form.plainPassword.second) }}#}
 
