--- a/wreck-them/src/WreckThemBundle/Resources/views/User/registro.html.twig
+++ b/wreck-them/src/WreckThemBundle/Resources/views/User/registro.html.twig
@@ -3,6 +3,7 @@
 {% block content %}
     {{ form_start(form) }}
     {{ form_row(form.email) }}
+    {{ form_row(form.nick) }}
     {{ form_row(form.plainPassword.first) }}
     {{ form_row(form.plainPassword.second) }}
 
