--- a/wreck-them/src/WreckThemBundle/Resources/views/Page/layout.html.twig
+++ b/wreck-them/src/WreckThemBundle/Resources/views/Page/layout.html.twig
@@ -5,8 +5,6 @@
         <h1>Wreck Them</h1>
     {% endblock %}
 
-
-    {% set user = app.user %}
     {% if user %}
         Bienvenido {{ user.email }}
 
@@ -18,6 +16,8 @@
 
         <a href="{{ path('perfil') }}">Perfil</a>
         <a href="{{ path('logout') }}">Cerrar sesión</a>
+
+        {% include 'WreckThemBundle:Chat:chat.html.twig' %}
     {% else %}
         <a href="{{ path('login') }}">Entrar</a>
         <a href="{{ path('register') }}">Registrarse</a>
