Refactorización del chat, y extraído como módulo en el lado del servidor

--- a/wreck-them/src/WreckThemBundle/Resources/views/Page/base.html.twig
+++ b/wreck-them/src/WreckThemBundle/Resources/views/Page/base.html.twig
@@ -23,30 +23,14 @@
 
     {% if user %}
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-
     <script>
-        $(function(){
-            var socket = io('http://localhost:3000');
-            $('form').submit(function(){
-                socket.emit('chat message', $('#m').val(), User);
-                $('#m').val('');
-                return false;
-            });
-            socket.on('chat message', function(msg){
-                $('#messages').append($('<li>').text(msg));
-            });
-
-            socket.on('new user', function(User){
-                $('#messages').append($('<li>').text('Usuario conectado:' + User.name));
-            });
-
-            var User = {
-                email: '{{ user.email }}',
-                name: '{{ user.nick }}'
-            };
-            socket.emit('new user', User);
-        })
+        {# Carga los datos del usuario actual en una variable global para posteriormente usarla en el resto de scripts #}
+        var User = {
+            email: '{{ user.email }}',
+            name: '{{ user.nick }}'
+        };
     </script>
+    <script src="{{ asset('js/chat-general.js') }}"></script>
     {% endif %}
 {% endblock %}
 </body>
