--- a/wreck-them/src/WreckThemBundle/Resources/views/Page/layout.html.twig
+++ b/wreck-them/src/WreckThemBundle/Resources/views/Page/layout.html.twig
@@ -18,6 +18,8 @@
         <a href="{{ path('logout') }}">Cerrar sesión</a>
 
         {% include 'WreckThemBundle:Chat:chat.html.twig' %}
+
+        <button id="search-game">Buscar partida</button>
     {% else %}
         <a href="{{ path('login') }}">Entrar</a>
         <a href="{{ path('register') }}">Registrarse</a>
