Creando modelo. Propiedades añadidas

--- a/wreck-them/src/WreckThemBundle/Resources/views/Page/layout.html.twig
+++ b/wreck-them/src/WreckThemBundle/Resources/views/Page/layout.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     {% block header %}
-        <h1>Wreck Them</h1>
+        <h1><a href="{{ path('homepage') }}">Wreck Them</a></h1>
     {% endblock %}
 
     {% if user %}
