--- a/wreck-them/src/WreckThemBundle/Resources/views/Page/base.html.twig
+++ b/wreck-them/src/WreckThemBundle/Resources/views/Page/base.html.twig
@@ -18,11 +18,14 @@
 
 {% block body %}{% endblock %}
 {% block scripts %}
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    <script src="{{ asset('js/lib/jquery-2.2.3.min.js') }}"></script>
+    {#<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>#}
+
+    {#<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>#}
 
     {% if user %}
-    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <script src="{{ asset('js/lib/socket.io-1.4.5.js') }}"></script>
+    {#<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>#}
 
     <script>
         var name = '{{ user.nick }}';
