--- a/wreck-them/src/WreckThemBundle/Resources/views/Page/index.html.twig
+++ b/wreck-them/src/WreckThemBundle/Resources/views/Page/index.html.twig
@@ -2,4 +2,11 @@
 
 {% block content %}
     <p>Inicio</p>
+
+    {% if user %}
+        <div>
+            <p>botones:</p>
+            <button id="action1">Acción</button>
+        </div>
+    {% endif %}
 {% endblock %}
