Refactorización de scripts. Añadida plantilla base de juego. Las cartas recibidas se añaden al DOM. El juego recibe una notificación cuando alguien intenta jugar una carta.

--- a/wreck-them/src/WreckThemBundle/Resources/views/Game/game-container.html.twig
+++ b/wreck-them/src/WreckThemBundle/Resources/views/Game/game-container.html.twig
@@ -1,13 +1,16 @@
+<h3>Juego</h3>
 <div id="game-container">
     <div id="oponnent-cards" class="player-cards">
-        {#<div id="oponnent-card-1" class="card">Carta 1</div>#}
+        Cartas del oponente:
     </div>
 
     <div id="suit">
-        <div class="card">Carta 1</div>
+        Baraja: <div class="card">Baraja</div>
+        Muestra: <div id="sample" class="card"></div>
     </div>
 
+    {#Las cartas con listener de click serán las de dentro de este div. El índice que se envía será de 0 a 3, pero debe coincidir con el índice que se encuentra en el servidor, por lo que al enviarse la carta desde el server, se envía el índice que tiene esta en la mano del usuario #}
     <div id="my-cards" class="player-cards">
-        {#<div id="my-card-1" class="card">Carta 1</div>#}
+        Mis cartas:
     </div>
 </div>
