--- a/brisca/app/Resources/views/base.html.twig
+++ b/brisca/app/Resources/views/base.html.twig
@@ -1,13 +1,42 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+{% set user = app.user %}
+{% set title = 'Brisca Online' %}
+<!doctype html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
+    <title>{{ title }}</title>
+
+    {% block stylesheets %}
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        {#<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">#}
+        <link rel="stylesheet" href="{{ asset('css/main.scss') }}">
+    {% endblock %}
+</head>
+<body>
+
+
+{% block body %}{% endblock %}
+{% block scripts %}
+    <script src="{{ asset('js/lib/jquery-2.2.3.min.js') }}"></script>
+    {#<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>#}
+
+    {#<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>#}
+
+    {% if user %}
+    <script src="{{ asset('js/lib/socket.io-1.4.5.js') }}"></script>
+    {#<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>#}
+
+    <script>
+        var name    = '{{ user.nick }}',
+                socket  = io('http://localhost:3000');
+    </script>
+
+    <script src="{{ asset('js/chat.js') }}"></script>
+    <script src="{{ asset('js/game.js') }}"></script>
+
+    {% endif %}
+{% endblock %}
+</body>
 </html>
